# cshot

./: .gitignore  CMakeLists.txt  LICENSE
include/: cleanup.h  common.h  input.h  registry.h  render.h  save.h  screencopy.h  shm.h
include/protocols/: wlr-layer-shell-unstable-v1.xml  wlr-screencopy-unstable-v1.xml
src/: cleanup.c  common.c  input.c  main.c  registry.c  render.c  save.c  screencopy.c  shm.c
